@@ -4,6 +4,7 @@
         <import addon="xbmc.python" version="2.20.0"/>
         <import addon="script.module.six"/>
         <import addon="script.module.requests" version="2.12.4"/>
+        <import addon="script.module.inputstreamhelper" version="0.2.2" optional="true"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="resources/lib/default.py">
         <provides>video</provides>
@@ -24,6 +25,11 @@
 [add] screensaver=true parameter to /play route - no suggested videos, no post play events, don't ask for quality
 [add] play route for channel live streams
         - plugin://plugin.video.youtube/play/?channel_id=UCLA_DiR1FfKNvjuUpBHmylQ&amp;live=1
+[add] Purchases
+        - requires inputstream.adaptive >= 2.0.14
+        - YouTube includes resolutions that are not available, to work around this;
+            - set InputStream Adaptive -> Settings -> Stream selection manual
+            - change video stream during playback to preferred working resolution
 [fix] search input, now works with Yatse
 [fix] Signature deciphering
 [fix] context menu after playback
