@@ -8,6 +8,12 @@ from ... import kodion
 from ...kodion import utils
 from ...youtube.helper import yt_context_menu
 
+try:
+    import inputstreamhelper
+except ImportError:
+    inputstreamhelper = None
+
+
 __RE_SEASON_EPISODE_MATCHES__ = [re.compile(r'Part (?P<episode>\d+)'),
                                  re.compile(r'#(?P<episode>\d+)'),
                                  re.compile(r'Ep.[^\w]?(?P<episode>\d+)'),
@@ -330,10 +336,13 @@ def update_video_infos(provider, context, video_id_dict, playlist_item_id_dict=N
             video_item.set_context_menu(context_menu, replace=replace_context_menu)
 
 
-def update_play_info(provider, context, video_id, video_item, meta_data=None, live=False):
+def update_play_info(provider, context, video_id, video_item, video_stream):
     settings = context.get_settings()
     resource_manager = provider.get_resource_manager(context)
     video_data = resource_manager.get_videos([video_id])
+
+    meta_data = video_stream.get('meta', None)
+    live = video_stream.get('Live', False)
 
     thumb_size = settings.use_thumbnail_size()
     image = None
@@ -352,6 +361,12 @@ def update_play_info(provider, context, video_id, video_item, meta_data=None, li
 
     # set mediatype
     video_item.set_mediatype('video')  # using video
+
+    if inputstreamhelper and video_stream.get('license_url'):
+        ishelper = inputstreamhelper.Helper('mpd', drm='com.widevine.alpha')
+        ishelper.check_inputstream()
+
+    video_item.set_license_key(video_stream.get('license_url'))
 
     # set the title
     if not video_item.get_title():
