@@ -27,6 +27,8 @@
         <setting id="kodion.video.quality.mpd.configure" type="action" label="30008" enable="eq(-1,true)+eq(-2,true)" visible="eq(-1,true)+eq(-2,true)" option="close" action="RunPlugin(plugin://plugin.video.youtube/config/mpd/)"/>
         <setting type="lsep" label="30621" visible="eq(-2,true)+eq(-3,true)"/>
         <setting id="kodion.mpd.proxy" type="bool" label="30618" default="false" enable="eq(-3,true)+eq(-4,true)" visible="eq(-3,true)+eq(-4,true)"/>
+        <setting type="sep" visible="eq(-4,true)+eq(-5,true)"/>
+        <setting id="kodion.install.inputstreamhelper" type="action" label="30623" action="RunPlugin(plugin://plugin.video.youtube/maintain/inputstreamhelper/install/)" enable="eq(-5,true)+eq(-6,true)" visible="eq(-5,true)+eq(-6,true)"/>
     </category>
     <category label="30516">
         <setting id="youtube.folder.sign.in.show" type="bool" label="30111" default="true"/>
@@ -42,6 +44,7 @@
         <setting id="youtube.folder.quick_search.show" type="bool" label="30605" default="false"/>
         <setting id="youtube.folder.quick_search_incognito.show" type="bool" label="30606" default="false"/>
         <setting id="youtube.folder.my_channel.show" type="bool" label="30507" default="true"/>
+        <setting id="youtube.folder.purchases.show" type="bool" label="30622" default="false"/>
         <setting id="youtube.folder.watch_later.show" type="bool" label="30107" default="true"/>
         <setting id="youtube.folder.watch_later.playlist" type="text" label="30037" enable="eq(-1,true)"
                  visible="eq(-1,true)" default="" subsetting="true"/>
